fixtures/errors/proxy_apply_non_callable_target.js
const proxy = new Proxy({}, {
    apply() {
        console.log("apply trap called");
        return 1;
    }
});

proxy();
